--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,24 +31,24 @@ dependencies:
   anim_search_bar: ^2.0.3
   animated_splash_screen: ^1.3.0
   connectivity_plus: ^3.0.3
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.5
   curved_labeled_navigation_bar: ^2.0.2
   email_auth: ^1.0.0
   email_otp: ^1.0.4
   email_validator: ^2.1.17
-  firebase_auth: ^4.2.6
-  firebase_core: ^2.5.0
-  firebase_database: ^10.0.10
-  firebase_storage: ^11.0.11
+  firebase_auth: ^4.2.10
+  firebase_core: ^2.7.1
+  firebase_database: ^10.0.15
+  firebase_storage: ^11.0.15
   flutter:
     sdk: flutter
 
   flutter_keyboard_visibility: ^5.4.0
-  flutter_launcher_icons: ^0.11.0
+  flutter_launcher_icons: ^0.12.0
   geolocator: ^9.0.2
-  google_maps_flutter: ^2.2.3
+  google_maps_flutter: ^2.2.5
   hexcolor: ^3.0.1
-  image_picker: ^0.8.6+1
+  image_picker: ^0.8.7
   input_history_text_field: ^0.2.0
   intl_phone_number_input: ^0.7.2
   liquid_swipe: ^3.0.0
@@ -59,16 +59,15 @@ dependencies:
   search_page: ^2.3.0
   shared_preferences: ^2.0.18
   slide_countdown: ^0.5.0
-  smooth_page_indicator: ^1.0.0+2
-  timer_count_down: ^2.2.0
-  google_sign_in: ^6.0.1
+  smooth_page_indicator: ^1.0.1
+  timer_count_down: ^2.2.2
+  google_sign_in: ^6.0.2
   font_awesome_flutter: ^10.4.0
   flutter_bloc: ^8.1.2
   top_snackbar_flutter: ^3.0.0+1
-  flutter_facebook_auth: ^5.0.7
-  cloud_firestore: ^4.4.3
+  flutter_facebook_auth: ^5.0.8
+  cloud_firestore: ^4.4.4
   location: ^4.4.0
-  flutter_osm_plugin: ^0.50.0
   flutter_map: ^3.1.0
   latlong2: ^0.8.1
   quickalert: ^1.0.1
@@ -76,19 +75,32 @@ dependencies:
     sdk: flutter
   intl: any
   pull_to_refresh: ^2.0.0
+  card_loading: ^0.3.0
+  loading_overlay_pro: ^2.1.1
+  loading_elevated_button: ^1.0.0+2
+  loading_btn: ^1.0.3
+  icon_loading_button: ^1.0.1
+  emerge_alert_dialog: ^0.0.3
+  flutter_filter_dialog: ^1.0.4
+  image_cropper: ^3.0.2
+  animated_text_kit: ^4.2.2
+  map_launcher: ^2.5.0+1
+  awesome_dialog: ^3.0.2
+  place_picker: ^0.10.0
+  geocoding: ^2.1.0
+  cached_network_image: ^3.2.3
+  camera: ^0.10.4
+  google_mlkit_image_labeling: ^0.6.0
+  tflite: ^1.1.2
+  flutter_rating_bar: ^4.0.1
 
 
 dev_dependencies:
 
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^2.0.1
   flutter_test:
     sdk: flutter
-  fluttertoast: ^8.1.2
+  fluttertoast: ^8.2.1
   http: ^0.13.5
 
 flutter_icons:
@@ -112,31 +124,17 @@ flutter_icons:
     generate: true
     image_path: "path/to/image.png"
 
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
-# The following section is specific to Flutter packages.
+
 flutter:
 
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
   uses-material-design: true
 
-  # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
     - assets/images/dev/
     - assets/images/Icons/
-  #   - images/a_dot_ham.jpeg
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/assets-and-images/#resolution-aware
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/assets-and-images/#from-packages
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
+    - assets/TFlite/
+
   fonts:
     - family: Vazirmatn
       fonts:
