--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,46 +30,46 @@ environment:
 dependencies:
   anim_search_bar: ^2.0.3
   animated_splash_screen: ^1.3.0
-  connectivity_plus: ^3.0.3
+  connectivity_plus: ^4.0.1
   cupertino_icons: ^1.0.5
   curved_labeled_navigation_bar: ^2.0.2
   email_auth: ^1.0.0
-  email_otp: ^1.0.4
+  email_otp: ^2.0.1
   email_validator: ^2.1.17
-  firebase_auth: ^4.2.10
-  firebase_core: ^2.7.1
-  firebase_database: ^10.0.15
-  firebase_storage: ^11.0.15
+  firebase_auth: ^4.6.3
+  firebase_core: ^2.14.0
+  firebase_database: ^10.2.3
+  firebase_storage: ^11.2.3
   flutter:
     sdk: flutter
 
-  flutter_keyboard_visibility: ^5.4.0
-  flutter_launcher_icons: ^0.12.0
+  flutter_keyboard_visibility: ^5.4.1
+  flutter_launcher_icons: ^0.13.1
   geolocator: ^9.0.2
-  google_maps_flutter: ^2.2.5
+  google_maps_flutter: ^2.3.1
   hexcolor: ^3.0.1
-  image_picker: ^0.8.7
+  image_picker: ^0.8.9
   input_history_text_field: ^0.2.0
-  intl_phone_number_input: ^0.7.2
-  liquid_swipe: ^3.0.0
+  intl_phone_number_input: ^0.7.3+1
+  liquid_swipe: ^3.1.0
   loading_indicator: ^3.1.0
   modal_bottom_sheet: ^2.1.2
   page_transition: ^2.0.9
-  qr_flutter: ^4.0.0
+  qr_flutter: ^4.1.0
   search_page: ^2.3.0
-  shared_preferences: ^2.0.18
-  slide_countdown: ^0.5.0
-  smooth_page_indicator: ^1.0.1
+  shared_preferences: ^2.1.2
+  slide_countdown: ^0.6.0
+  smooth_page_indicator: ^1.1.0
   timer_count_down: ^2.2.2
-  google_sign_in: ^6.0.2
+  google_sign_in: ^6.1.4
   font_awesome_flutter: ^10.4.0
-  flutter_bloc: ^8.1.2
+  flutter_bloc: ^8.1.3
   top_snackbar_flutter: ^3.0.0+1
-  flutter_facebook_auth: ^5.0.8
-  cloud_firestore: ^4.4.4
+  flutter_facebook_auth: ^6.0.0
+  cloud_firestore: ^4.8.1
   location: ^4.4.0
-  flutter_map: ^3.1.0
-  latlong2: ^0.8.1
+  flutter_map: ^5.0.0
+  latlong2: ^0.9.0
   quickalert: ^1.0.1
   flutter_localizations:
     sdk: flutter
@@ -82,15 +82,15 @@ dependencies:
   icon_loading_button: ^1.0.1
   emerge_alert_dialog: ^0.0.3
   flutter_filter_dialog: ^1.0.4
-  image_cropper: ^3.0.2
+  image_cropper: 5.0.0
   animated_text_kit: ^4.2.2
   map_launcher: ^2.5.0+1
-  awesome_dialog: ^3.0.2
+  awesome_dialog: 3.1.0
   place_picker: ^0.10.0
   geocoding: ^2.1.0
   cached_network_image: ^3.2.3
-  camera: ^0.10.4
-  google_mlkit_image_labeling: ^0.6.0
+  camera: 0.10.5+2
+  google_mlkit_image_labeling: 0.7.0
   tflite: ^1.1.2
   flutter_rating_bar: ^4.0.1
 
@@ -100,8 +100,8 @@ dev_dependencies:
   flutter_lints: ^2.0.1
   flutter_test:
     sdk: flutter
-  fluttertoast: ^8.2.1
-  http: ^0.13.5
+  fluttertoast: ^8.2.2
+  http: 1.0.0
 
 flutter_icons:
   android: true
